former-apps/cloudtorrent/cloudtorrent-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudtorrent
spec:
  serviceName: cloudtorrent
  replicas: 1
  selector:
    matchLabels:
      app: cloudtorrent
  template:
    metadata:
      labels:
        app: cloudtorrent
        tier: downloader
    spec:
      containers:
        - name: cloudtorrent
          image: localhost:32000/cloudtorrent
          ports:
            - name: cloudtorrent
              containerPort: 3000
          volumeMounts:
            - name: cloudtorrent-config
              subPath: cloud-torrent.json
              mountPath: /cloud-torrent.json
            - name: cloudtorrent
              subPath: downloads
              mountPath: /downloads
            - name: cloudtorrent
              subPath: watchdir
              mountPath: /watchdir
          livenessProbe:
            httpGet:
              path: /healthz
              port: cloudtorrent
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: cloudtorrent
              scheme: HTTP
      volumes:
        - name: cloudtorrent
          persistentVolumeClaim:
            claimName: cloudtorrent
        - name: cloudtorrent-config-ro
          configMap:
            name: cloudtorrent-config
        - name: cloudtorrent-config
          emptyDir: {}
