former-apps/cloudtorrent/cloudtorrent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudtorrent
spec:
  type: ClusterIP
  selector:
    app: cloudtorrent
  ports:
    - name: cloudtorrent
      port: 3000
      targetPort: 3000
